Scraping Discounted Data from Zara

--- a/smartdealstylist.ipynb
+++ b/smartdealstylist.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyN4IR6sbJWTNxSm0FHKXHhq",
+      "authorship_tag": "ABX9TyNDi1owuOypfhoPJvouo7IP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,17 +23,122 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/suprithakonaje/smartdeal-stylist/blob/main/smartdealstylist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/suprithakonaje/smartdeal-stylist/blob/develop/smartdealstylist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "7YY513ePeWow"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_discount(original, sale):\n",
+        "    if not original or not sale:\n",
+        "        return None\n",
+        "    return round((1 - (sale / original)) * 100)"
+      ],
+      "metadata": {
+        "id": "amGQ4lraqkvC"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scrape(category_id: int, region_group_id: int = 8):\n",
+        "\n",
+        "    # TODO - add pagination so it scrapes all pages of a category automatically\n",
+        "    # right now it only fetches the first batch of products. This is essential if you want a full catalog of deals\n",
+        "\n",
+        "    url = f\"https://www.zara.com/us/en/category/{category_id}/products?regionGroupId={region_group_id}&ajax=true\"\n",
+        "    headers = {\n",
+        "        \"User-Agent\": \"Mozilla/5.0\",\n",
+        "        \"Accept\": \"application/json\"\n",
+        "    }\n",
+        "    try:\n",
+        "      r = requests.get(url, headers=headers, timeout=20)\n",
+        "      r.raise_for_status()\n",
+        "      data = r.json()\n",
+        "    except Exception as e:\n",
+        "      print(f\"Zara scraping failed: {e}\")\n",
+        "      return []\n",
+        "\n",
+        "    products = []\n",
+        "\n",
+        "    for group in data.get(\"productGroups\", []):\n",
+        "      for element in group.get(\"elements\", []):\n",
+        "        for component in element.get(\"commercialComponents\", []):\n",
+        "          name = component.get(\"name\")\n",
+        "          product_id = component.get(\"id\")\n",
+        "          url_path = component.get(\"seo\", \"\")\n",
+        "          seo_slug = component.get(\"seo\", {}).get(\"keyword\", \"\")\n",
+        "          product_url = f\"https://www.zara.com/us/en/{seo_slug}-p{product_id}.html\" if product_id and seo_slug else None\n",
+        "\n",
+        "          original = component.get(\"oldPrice\")\n",
+        "          sale = component.get(\"price\")\n",
+        "\n",
+        "          discount_percent = component.get(\"displayDiscountPercentage\")\n",
+        "          discount_label = component.get(\"discountLabel\")\n",
+        "\n",
+        "          colors = component.get(\"detail\", {}).get(\"colors\", [])\n",
+        "          image_url = None\n",
+        "          if colors and colors[0].get(\"xmedia\"):\n",
+        "            image_url = colors[0][\"xmedia\"][0][\"url\"].replace(\"{width}\", \"600\")\n",
+        "\n",
+        "          products.append({\n",
+        "            \"brand\": \"Zara\",\n",
+        "            \"name\": name,\n",
+        "            \"original_price\": original / 100 if original else None,\n",
+        "            \"sale_price\": sale / 100 if sale else None,\n",
+        "            \"discount_percent\": discount_percent,\n",
+        "            \"discount_label\": discount_label,\n",
+        "            \"image_url\": image_url,\n",
+        "            \"url\": product_url\n",
+        "          })\n",
+        "    return products"
+      ],
+      "metadata": {
+        "id": "SVQYAtO5ghWa"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zara_items = scrape(2419737)\n",
+        "df = pd.DataFrame(zara_items)\n",
+        "df.to_csv(\"deals_raw.csv\", index=False)\n",
+        "print(f\"Saved {len(df)} items into deals_raw.csv\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9MrirJKkgmIz",
+        "outputId": "12e32a4b-66cb-49d3-fb1c-99acc514ad89"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved 270 items into deals_raw.csv\n"
+          ]
+        }
+      ]
     }
   ]
 }
