Deleted unnecessary functions

--- a/smartdealstylist.ipynb
+++ b/smartdealstylist.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDi1owuOypfhoPJvouo7IP",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNw2uqnCWlEvIRMJi3SnS+X"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/suprithakonaje/smartdeal-stylist/blob/develop/smartdealstylist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 23,
@@ -38,20 +27,6 @@
         "from bs4 import BeautifulSoup\n",
         "import pandas as pd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def compute_discount(original, sale):\n",
-        "    if not original or not sale:\n",
-        "        return None\n",
-        "    return round((1 - (sale / original)) * 100)"
-      ],
-      "metadata": {
-        "id": "amGQ4lraqkvC"
-      },
-      "execution_count": 24,
-      "outputs": []
     },
     {
       "cell_type": "code",
